[project]
name = "latentflow"
version = "0.1.0"
description = ""
authors = [
    {name = "SeuperHakkerJa",email = "jacobxiaochen@sina.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "datasets (>=3.5.0,<4.0.0)",
    "jaxtyping >=0.3.0",
    "transformers (>=4.50.3,<5.0.0)",
    "transformer-lens (>=2.15.0,<3.0.0)",
    "nnsight (>=0.4.5,<0.5.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
